--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>webmagic-extension</artifactId>
       <version>0.7.3</version>
     </dependency>
+    <dependency>
+      <groupId>us.codecraft</groupId>
+      <artifactId>webmagic-selenium</artifactId>
+      <version>0.7.3</version>
+    </dependency>
 
   </dependencies>
 </project>
